syntax = "proto3";

package incident;

// IncidentAlertService provides a stream of current incidents on a motorway section
service IncidentAlertService {
  // RPC to stream the current incidents based on a given request with location
  rpc GetCurrentIncident(IncidentRequest) returns (stream IncidentResponse) {}
}

// Request for incident updates on a specific location
message IncidentRequest {
  string location = 1;
}

// Response for indidents updates
message IncidentResponse {
  string date = 1;
  string time = 2;
  string motorwaySection = 3;
  string description = 4;
}